# AgentForge

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  adapters.py  base.py  registry.py
app/api/: routes_agents.py  routes_health.py  routes_knowledge.py  routes_tools.py  routes_workflows.py
app/core/: bootstrap.py  config.py  plugin_loader.py
app/evaluation/: __init__.py  cli.py  datasets.py  evaluator.py
app/knowledge/: __init__.py  store.py
app/llm/: __init__.py  factory.py  models.py
app/memory/: __init__.py  store.py
app/observability/: __init__.py  tracing.py
app/persistence/: __init__.py  models.py  sqlite_store.py
app/prompts/: __init__.py  renderer.py  store.py
app/protocol/: __init__.py  schemas.py
app/rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
app/tools/: __init__.py  adapters.py  base.py  registry.py
app/workflows/: __init__.py  base.py  conditional.py  graph_builder.py  parallel.py  registry.py  runner.py
examples/evaluation/: sample.jsonl
plugins/: __init__.py
plugins/agents/: __init__.py  (+5 more)
tests/: test_agent_router_workflow.py  test_agents.py  test_api.py  test_conditional_intel_workflow.py  test_core.py  test_evaluation.py  test_human_review_workflow.py  test_knowledge_api.py  test_knowledge_base.py  test_knowledge_base_agent.py  test_knowledge_base_workflow.py  test_memory.py  test_parallel_intel_workflow.py  test_persistence.py  test_rag.py  test_single_research_workflow.py  test_tools.py  test_tracing.py  test_workflows.py
(+21 files in other folders)
