[project]
name = "osintbase"
version = "0.1.0"
description = "LangChain/LangGraph based OSINT and intelligence analysis agent application base."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "langchain>=0.2.0",
  "langchain-core>=0.2.0",
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]
openai = ["langchain-openai>=0.1.0"]
anthropic = ["langchain-anthropic>=0.1.0"]
ollama = ["langchain-ollama>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "plugins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
